# jenius-mcp-smart-device

./: .gitignore  .mcp.env  README.md  README_EN.md  jenius_mcp.py  pyproject.toml
tools/: common.py
tools/mcp/: fan.py  roborock_t7.py  xiaomi_air_purifier.py  xiaomi_speaker.py  xiaomi_surveillance.py
utils/: logger.py
